// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/maven/index getReleases should return all versions from a custom repository 1`] = `
Object {
  "display": "mysql:mysql-connector-java",
  "group": "mysql",
  "homepage": "http://dev.mysql.com/doc/connector-j/en/",
  "name": "mysql-connector-java",
  "registryUrl": "https://custom.registry.renovatebot.com",
  "releases": Array [
    Object {
      "version": "6.0.5",
    },
    Object {
      "version": "6.0.6",
    },
    Object {
      "version": "8.0.7",
    },
    Object {
      "version": "8.0.8",
    },
    Object {
      "version": "8.0.9",
    },
    Object {
      "version": "8.0.11",
    },
    Object {
      "version": "8.0.12",
    },
  ],
  "sourceUrl": "https://github.com/mysql/mysql-connector-j",
}
`;

exports[`datasource/maven/index getReleases should return all versions of a specific library if a repository fails 1`] = `
Array [
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.650Z",
    "version": "6.0.5",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.660Z",
    "version": "6.0.6",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.870Z",
    "version": "8.0.7",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.880Z",
    "version": "8.0.8",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.890Z",
    "version": "8.0.9",
  },
]
`;

exports[`datasource/maven/index getReleases should return all versions of a specific library if a repository fails because invalid metadata file is found in another repository 1`] = `
Object {
  "display": "mysql:mysql-connector-java",
  "group": "mysql",
  "name": "mysql-connector-java",
  "registryUrl": "https://repo.maven.apache.org/maven2/",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T00:00:00.650Z",
      "version": "6.0.5",
    },
    Object {
      "releaseTimestamp": "2020-01-01T00:00:00.660Z",
      "version": "6.0.6",
    },
    Object {
      "releaseTimestamp": "2020-01-01T00:00:00.870Z",
      "version": "8.0.7",
    },
    Object {
      "releaseTimestamp": "2020-01-01T00:00:00.880Z",
      "version": "8.0.8",
    },
    Object {
      "releaseTimestamp": "2020-01-01T00:00:00.890Z",
      "version": "8.0.9",
    },
  ],
}
`;

exports[`datasource/maven/index getReleases should return all versions of a specific library if a repository fails because invalid protocol 1`] = `
Array [
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.650Z",
    "version": "6.0.5",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.660Z",
    "version": "6.0.6",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.870Z",
    "version": "8.0.7",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.880Z",
    "version": "8.0.8",
  },
  Object {
    "releaseTimestamp": "2020-01-01T00:00:00.890Z",
    "version": "8.0.9",
  },
]
`;

exports[`datasource/maven/index getReleases should return versions in all repositories for a specific library 1`] = `
Object {
  "display": "mysql:mysql-connector-java",
  "group": "mysql",
  "homepage": "http://dev.mysql.com/doc/connector-j/en/",
  "name": "mysql-connector-java",
  "releases": Array [
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/custom_maven_repo/maven2/",
      "version": "6.0.4",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "6.0.5",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "6.0.6",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "8.0.7",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "8.0.8",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "8.0.9",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "8.0.11",
    },
    Object {
      "registryUrl": "file://lib/datasource/maven/__fixtures__/repo1.maven.org/maven2/",
      "version": "8.0.12",
    },
  ],
  "sourceUrl": "https://github.com/mysql/mysql-connector-j",
}
`;

exports[`datasource/maven/index getReleases should simply return all versions of a specific library 1`] = `
Array [
  Object {
    "version": "1.1",
  },
  Object {
    "version": "1.2",
  },
  Object {
    "version": "1.2.1",
  },
  Object {
    "version": "1.3.RC2",
  },
  Object {
    "version": "1.3",
  },
  Object {
    "version": "2.1-rc2",
  },
  Object {
    "version": "2.1-rc3",
  },
]
`;
